2019-07-12  Petasis George  <petasis@iit.demokritos.gr>
	* 
2019-06-13  Petasis George  <petasis@iit.demokritos.gr>
	* library/tkdnd_generic.tcl: Removed usage of "{*}" for better Tcl 8.4
	compatibility.

2019-06-09  Petasis George  <petasis@iit.demokritos.gr>
	* doc/tkDND.n: Documented %x, %y binding keywords.

	* library/tkdnd_generic.tcl: Added feature request #31:
	(https://github.com/petasis/tkdnd/issues/31)

	* library/tkdnd_utils.tcl:
	* library/tkdnd_generic.tcl: Fixed bug #33:
	(https://github.com/petasis/tkdnd/issues/33)

	* library/tkdnd.tcl: Fixed bug #30:
	(https://github.com/petasis/tkdnd/issues/30)
	Fixed bug #32:
	(https://github.com/petasis/tkdnd/issues/32)

2019-04-16  Petasis George  <petasis@iit.demokritos.gr>
	* Version 2.9.2 released.

	* demos/basic.tcl: Merged pull request #29.
	(https://github.com/petasis/tkdnd/pull/29)

	* configure.ac: configure reads version from VERSION. Added
	TEA_PATH_X, to link with the X11 library. Fixed bug #27.
	(https://github.com/petasis/tkdnd/issues/27)

	* VERSION:
	* CMakeLists.txt: Added a VERSION file. CMake reads version from this
	file. Merged pull request #28.
	(Fixes bug #26 https://github.com/petasis/tkdnd/issues/26).

2019-02-03  Petasis George  <petasis@iit.demokritos.gr>
	* library/tkdnd.tcl: Added conversion from utf-8 in
	::tkdnd::urn_unquote.

	* library/tkdnd_unix.tcl: Added support for comments in
	xdnd::normalise_data for the "text/uri-list" media type.

	* demos/dndSpy.tcl: Modified demo to also show data to be dropped
	during drag.

	* win/OleDND.h:
	* unix/TkDND_XDND.c
	* library/tkdnd_generic.tcl:
	* library/tkdnd_macosx.tcl:
	* library/tkdnd_unix.tcl:
	* library/tkdnd_windows.tcl: Provided a solution for bug #25.
	Under Windows and Unix, the dropped data is available for the
	<<DropEnter>> and <<DropPosition>> events (%D specifier).

2018-12-23  Petasis George  <petasis@iit.demokritos.gr>
	* .travis.yml: make install & deployment to GitHub.
